<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_keypad">keypad</string>
    <string name="sudokuMain">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="newGame_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="title_activity_activity_about">activity_about</string>
    <string name="regels_label">Hier een aantal tips om u op weg te helpen bij het oplossen van de Sudoku puzzel.
In elk hokje komt een cijfer van 1 tot en met 9 te staan. Elke rij, elke kolom en elk vierkant van 3 bij 3 (omlijnd door een dikke zwarte lijn) bevat alle nummers van 1 tot 9. Natuurlijk is er een aantal cijfers weggegeven.</string>
    <string name="title_activity_game">game</string>
    <string name="title_activity_sudoku">sudoku</string>
    <string name="title_activity_sud">sud</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>

    <string name="game_title">Game</string>
    <string name="keypad_title">Keypad</string>
    <string name="no_moves_label">There are no moves.</string>

</resources>
